--- a/src/App.css
+++ b/src/App.css
@@ -2,22 +2,6 @@
   text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 button  {
   margin:1rem;
 }
@@ -26,7 +10,29 @@ input {
   margin:1rem;
 }
 
+#TodaysFood {
+  text-align:left;
+  margin-left:2rem;
+}
+
 h2  {
   font-weight:bold;
   font-size:1.25rem;
+  margin-bottom:1rem;
+}
+
+#TodaysFood ul {
+  display:flex;
+  flex-direction:column;
+  align-items:flex-start;
+}
+
+#TodaysFood ul li {
+  margin-left:2rem;
+  text-align:left;
+  display:flex;
+  flex-direction:row;
+  justify-content:space-evenly;
+  align-items:center;
+  height:2rem;
 }
