--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,16 @@ button  {
   margin:1rem;
 }
 
+.toggleSearchBtn {
+  background-color:rgb(76, 134, 200);
+  border:none;
+  color:white;
+  padding:.6rem;
+  border-radius:.25rem;
+  display:block;
+  margin:1rem auto;
+}
+
 input {
   margin:1rem;
 }
@@ -35,4 +45,8 @@ h2  {
   justify-content:space-evenly;
   align-items:center;
   height:2rem;
+}
+
+.is-danger  {
+  background-color: red;
 }
